add-middle-board

--- a/index.html
+++ b/index.html
@@ -571,10 +571,38 @@
       </div>
     </div>
   </div>
+  <!-- End Section -->
 
-  <!-- End Section -->s
+  <div class="zubuz-testimonial-slider-section zubuz-section-padding2" style="background-image: url(assets/images/v2/t-bg.png)">
+    <div class="container">
+      <div class="zubuz-testimonial-slider">
+        <div class="zubuz-testimonial-slider-item">
+          <div class="zubuz-testimonial-slider-data">
+            <h2 class="text-white" style="font-size: 40px"> Central LMS:</h2>
+            <h2 class="text-white" style="font-size: 35px">Igniting Learning, Empowering Productivity!</h2>
+            <div class="zubuz-testimonial-slider-rating my-4">
+              <ul>
+                <li><img src="assets/images/v2/rating2.png" alt=""></li>
+                <li><img src="assets/images/v2/rating2.png" alt=""></li>
+                <li><img src="assets/images/v2/rating2.png" alt=""></li>
+                <li><img src="assets/images/v2/rating2.png" alt=""></li>
+                <li><img src="assets/images/v2/rating2.png" alt=""></li>
+              </ul>
+            </div>
+<!--            <p class="slider-text">Experience unparalleled support with our round-the-clock customer service offered by our support team-->
+<!--              with acute knowledge of all products and services.-->
+<!--            </p>-->
+<!--            <p class="slider-text">-->
+<!--              Rest assured, we're here for you whenever you need us, ensuring a seamless and satisfying experience every step of the way.-->
+<!--            </p>-->
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- End Section -->
   <div class="section zubuz-section-padding2">
-    <div id="zubuz-counter"></div>
+    <div id="zubuz-counter1"></div>
     <div class="container zubuz-brand-logo-wrap">
       <div class="row align-items-center">
         <div class="col-lg-5">
@@ -908,7 +936,7 @@
       <div class="zubuz-testimonial-slider">
         <div class="zubuz-testimonial-slider-item">
           <div class="zubuz-testimonial-slider-data">
-            <h2 class="mo-h2 text-white"> Enjoy 95%+ uptime with our dedicated support team.</h2>
+            <h2 class="text-white" style="font-size: 40px"> Enjoy 95%+ uptime with our dedicated support team.</h2>
             <div class="zubuz-testimonial-slider-rating my-4">
               <ul>
                 <li><img src="assets/images/v2/rating2.png" alt=""></li>
@@ -923,50 +951,6 @@
             </p>
             <p class="slider-text">
               Rest assured, we're here for you whenever you need us, ensuring a seamless and satisfying experience every step of the way.
-            </p>
-          </div>
-        </div>
-        <div class="zubuz-testimonial-slider-item">
-          <div class="zubuz-testimonial-slider-data">
-            <h2 class="mo-h2 text-white"> Central LMS: Igniting Learning, Empowering Productivity!</h2>
-
-            <div class="zubuz-testimonial-slider-rating my-4">
-              <ul>
-                <li><img src="assets/images/v2/rating2.png" alt=""></li>
-                <li><img src="assets/images/v2/rating2.png" alt=""></li>
-                <li><img src="assets/images/v2/rating2.png" alt=""></li>
-                <li><img src="assets/images/v2/rating2.png" alt=""></li>
-                <li><img src="assets/images/v2/rating2.png" alt=""></li>
-              </ul>
-            </div>
-            <p class="slider-text">
-              Experience unparalleled support with our round-the-clock customer service offered by our support team
-              with acute knowledge of all products and services.
-            </p>
-            <p class="slider-text">
-              Rest assured, we're here for you whenever you need us, ensuring a seamless and satisfying experience every step of the way.
-            </p>
-          </div>
-        </div>
-        <div class="zubuz-testimonial-slider-item">
-          <div class="zubuz-testimonial-slider-data">
-            <h2 class="mo-h2 text-white"> Enjoy 95%+ uptime with our dedicated support team.</h2>
-
-            <div class="zubuz-testimonial-slider-rating my-4">
-              <ul>
-                <li><img src="assets/images/v2/rating2.png" alt=""></li>
-                <li><img src="assets/images/v2/rating2.png" alt=""></li>
-                <li><img src="assets/images/v2/rating2.png" alt=""></li>
-                <li><img src="assets/images/v2/rating2.png" alt=""></li>
-                <li><img src="assets/images/v2/rating2.png" alt=""></li>
-              </ul>
-            </div>
-            <p class="slider-text">
-              Experience unparalleled support with our round-the-clock customer service offered by our support team
-              with acute knowledge of all products and services.
-            </p>
-            <p class="slider-text">
-            Rest assured, we're here for you whenever you need us, ensuring a seamless and satisfying experience every step of the way.
             </p>
           </div>
         </div>
