--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <link rel="stylesheet" href="assets/css/app.min.css">
   <style>
     .mo-h2 {
-        font-size: 55px !important;
+        font-size: 50px !important;
     }
     .h1, h1 {
       letter-spacing: 0 !important;
@@ -485,7 +485,7 @@
   <div class="section zubuz-section-padding3">
     <div class="container">
       <div class="zubuz-section-title center">
-        <h2>Benefits and applications to your organization</h2>
+        <h2 class="mo-h2">Benefits and applications to your organization</h2>
       </div>
       <div class="row">
         <div class="col-lg-6">
@@ -839,7 +839,7 @@
   <div class="section zubuz-section-padding3 bg-light position-relative">
     <div class="container">
       <div class="zubuz-section-title center">
-        <h2>Rational planning for rapid growth</h2>
+        <h2 class="mo-h2">Rational planning for rapid growth</h2>
       </div>
       <div class="pricing-btn">
         <label>Billed monthly</label>
