--- a/index.html
+++ b/index.html
@@ -64,6 +64,48 @@
       transform: translate(100%, -100%);
       color: white !important;
     }
+    .ignite {
+      isolation: isolate;
+      position: relative;
+      display: grid;
+      grid-template-columns: repeat(6, minmax(0, 1fr));
+      grid-template-rows: 1fr auto 1fr;
+      gap: 32px 24px;
+      /*padding-block-start: 113px;*/
+      /*min-height: 100svh;*/
+      min-height: 100vh;
+    }
+
+    .ignite-bg {
+      position: absolute;
+    }
+
+    .aspect-16\/9 {
+      aspect-ratio: 16 / 9;
+    }
+    .ignite__media {
+      width: 100%;
+      height: 100%;
+      -o-object-fit: cover;
+      object-fit: cover;
+    }
+
+    .ignite__content {
+      display: flex;
+      grid-column: span 6;
+      grid-row: span 1 / 3;
+      flex-direction: column;
+      /*gap: 24px;*/
+      align-items: center;
+      min-width: 100%;
+    }
+
+
+    @media (min-width: 768px)
+    .ignite__content {
+      grid-column: 2 / 6;
+      gap: 32px;
+    }
   </style>
 </head>
 
@@ -85,7 +127,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5" id="signupFormLabel">Sign up</h1>
+          <h1 class="modal-title fs-5" id="signupFormLabel">Request a demo</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -97,22 +139,12 @@
                    <input type="text" class="form-control  p-2 px-4" id="fname">
                  </div>
                </div>
-             </div>
-             <div class="row">
                <div class="col-lg-6">
                  <div class="mb-3">
                    <label for="phoneNumber" class="form-label small">Phone Number:</label>
                    <input type="text" class="form-control  p-2 px-4" id="phoneNumber">
                  </div>
                </div>
-               <div class="col-lg-6">
-                 <div class="mb-3">
-                   <label for="email" class="form-label small">E-mail:</label>
-                   <input type="email" class="form-control  p-2 px-4" id="email">
-                 </div>
-               </div>
-             </div>
-             <div class="row">
                <div class="col-lg-6">
                  <div class="mb-3">
                    <label for="company" class="form-label small">Company Name:</label>
@@ -125,8 +157,6 @@
                    <input type="email" class="form-control  p-2 px-4" id="wemail">
                  </div>
                </div>
-             </div>
-             <div class="row">
                <div class="col-lg-6">
                  <div class="mb-3">
                    <label for="prefer" class="form-label small">Preferred date:</label>
@@ -141,7 +171,6 @@
                    </select>
                  </div>
                </div>
-
              </div>
              <div class="">
                   <p for="duration" class="form-label small">How long would you like your demo to be?:</p>
@@ -165,8 +194,12 @@
             </form>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-danger btn-sm p-0" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-success btn-sm p-0">Submit</button>
+          <button
+                  style="background-color: #ABFB4F"
+                  class="btn btn-outline-success rounded-pill px-5 py-4 text-dark my-3"
+          >
+            Submit
+          </button>
         </div>
       </div>
     </div>
@@ -607,31 +640,53 @@
   </div>
   <!-- End Section -->
 
-  <div class="zubuz-testimonial-slider-section zubuz-section-padding2" style="background-image: url(assets/images/v2/t-bg.png)">
-    <div class="container">
-      <div class="zubuz-testimonial-slider">
-        <div class="zubuz-testimonial-slider-item">
-          <div class="zubuz-testimonial-slider-data">
-            <h2 class="text-white" style="font-size: 40px"> Central LMS:</h2>
-            <h2 class="text-white" style="font-size: 35px">Igniting Learning, Empowering Productivity!</h2>
-            <button
-                    style="background-color: #ABFB4F"
-                    class="btn btn-outline-success rounded-pill px-5 py-4 text-dark my-3"
-                    data-bs-toggle="modal"
-                    data-bs-target="#demo"
-            >
-              <img src="assets/images/v1/play-btn.png" alt="" class="me-3">
-              Watch a Demo
-            </button>
-<!--            <p class="slider-text">Experience unparalleled support with our round-the-clock customer service offered by our support team-->
-<!--              with acute knowledge of all products and services.-->
-<!--            </p>-->
-<!--            <p class="slider-text">-->
-<!--              Rest assured, we're here for you whenever you need us, ensuring a seamless and satisfying experience every step of the way.-->
-<!--            </p>-->
-          </div>
-        </div>
+  <div class="ignite border">
+
+    <div class="hero__background astro-7s3rfpqm">
+      <div class="ignite-bg w-100">
+        <video id="ignite__video" class="ignite__media astro-7s3rfpqm aspect-16/9"  loop="" playsinline="" width="16" height="9" poster="https://res.cloudinary.com/dcis5o17u/video/upload/f_auto,q_auto,c_fill,so_auto,ar_16:9,w_2560/v1706023967/Services/2019_06_-_y_co_charter_d1lwrr.jpg">
+<!--          <source src="https://archive.org/download/BigBuckBunny_124/Content/big_buck_bunny_720p_surround.webm" type="video/webm">-->
+          <source src="https://archive.org/download/BigBuckBunny_124/Content/big_buck_bunny_720p_surround.mp4" type="video/mp4">
+        </video>
       </div>
+
+<!--    <div class="container">-->
+<!--      <div class="zubuz-testimonial-slider">-->
+<!--        <div class="zubuz-testimonial-slider-item">-->
+<!--          <div class="zubuz-testimonial-slider-data">-->
+<!--            <h2 class="text-white" style="font-size: 40px"> Central LMS:</h2>-->
+<!--            <h2 class="text-white" style="font-size: 35px">Igniting Learning, Empowering Productivity!</h2>-->
+<!--            <button-->
+<!--                    style="background-color: #ABFB4F"-->
+<!--                    class="btn btn-outline-success rounded-pill px-5 py-4 text-dark my-3"-->
+<!--                    data-bs-toggle="modal"-->
+<!--                    data-bs-target="#demo"-->
+<!--            >-->
+<!--              <img src="assets/images/v1/play-btn.png" alt="" class="me-3">-->
+<!--              Watch a Demo-->
+<!--            </button>-->
+<!--&lt;!&ndash;            <p class="slider-text">Experience unparalleled support with our round-the-clock customer service offered by our support team&ndash;&gt;-->
+<!--&lt;!&ndash;              with acute knowledge of all products and services.&ndash;&gt;-->
+<!--&lt;!&ndash;            </p>&ndash;&gt;-->
+<!--&lt;!&ndash;            <p class="slider-text">&ndash;&gt;-->
+<!--&lt;!&ndash;              Rest assured, we're here for you whenever you need us, ensuring a seamless and satisfying experience every step of the way.&ndash;&gt;-->
+<!--&lt;!&ndash;            </p>&ndash;&gt;-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
+  </div>
+    <div class="ignite__content astro-7s3rfpqm">
+      <h1 class="text-white w-100 text-center mb-0">Central LMS:</h1>
+      <h1 class="text-white w-100 text-center mo-h2 mb-0">Igniting Learning, Empowering Productivity!</h1>
+                  <button
+                          style="background-color: #ABFB4F"
+                          class="btn btn-outline-success rounded-pill px-5 py-4 text-dark my-3"
+                          id="ignite-play"
+                  >
+                    <img src="assets/images/v1/play-btn.png" alt="" class="me-3">
+                    Watch a Demo
+                  </button>
     </div>
   </div>
   <!-- End Section -->
@@ -871,19 +926,19 @@
 
 
   <div class="section zubuz-section-padding3 bg-light position-relative">
-    <div class="container">
+    <div class="container-fluid">
       <div class="zubuz-section-title center">
-        <h2 class="mo-h2">Rational planning for rapid growth</h2>
+        <h2 class="mo-h2">Subscription/Plan</h2>
       </div>
-      <div class="pricing-btn">
-        <label>Billed monthly</label>
-        <div class="toggle-btn">
-          <input class="form-check-input btn-toggle price-deck-trigger" type="checkbox" id="flexSwitchCheckDefault" data-pricing-trigger data-target="#table-price-value" checked>
-        </div>
-        <label>Billed annually</label>
-      </div>
+<!--      <div class="pricing-btn">-->
+<!--        <label>Billed monthly</label>-->
+<!--        <div class="toggle-btn">-->
+<!--          <input class="form-check-input btn-toggle price-deck-trigger" type="checkbox" id="flexSwitchCheckDefault" data-pricing-trigger data-target="#table-price-value" checked>-->
+<!--        </div>-->
+<!--        <label>Billed annually</label>-->
+<!--      </div>-->
       <div class="row" id="table-price-value" data-pricing-dynamic data-value-active="monthly">
-        <div class="col-xl-4 col-md-6">
+        <div class="col-xl-3 col-md-6">
           <div class="zubuz-pricing-wrap">
             <div class="zubuz-pricing-header">
               <h5>Basic</h5>
@@ -894,24 +949,24 @@
               <p class="dynamic-value" data-active="USD/Billed monthly" data-monthly="USD/Billed monthly" data-yearly="USD/Billed Yearly"></p>
             </div>
             <div class="zubuz-pricing-description">
-              <p>Works perfect for small teams</p>
+              <p>Up to 10 100 users</p>
             </div>
             <div class="zubuz-pricing-body">
               <ul>
-                <li><img src="assets/images/v2/check2.png" alt="">Live chat widget for website</li>
-                <li><img src="assets/images/v2/check2.png" alt="">All basic CRM features</li>
-                <li><img src="assets/images/v2/check2.png" alt="">Up to 5,000 contacts</li>
-                <li><img src="assets/images/v2/check2.png" alt="">Flow base chatbot</li>
-                <li><img src="assets/images/v2/check2.png" alt="">24/7 Email Support</li>
+                <li><img src="assets/images/v2/check2.png" alt="">Includes all features</li>
+                <li><img src="assets/images/v2/check2.png" alt="">Custom branding</li>
+                <li><img src="assets/images/v2/check2.png" alt="">120 course upload</li>
+                <li><img src="assets/images/v2/check2.png" alt="">24/7 Support (Email, Chat)</li>
+                <li><img src="assets/images/v2/check2.png" alt="">100 GB file storage</li>
               </ul>
             </div>
             <a class="zubuz-pricing-btn" href="pricing.html">Select the plan</a>
           </div>
         </div>
-        <div class="col-xl-4 col-md-6">
+        <div class="col-xl-3 col-md-6">
           <div class="zubuz-pricing-wrap active">
             <div class="zubuz-pricing-header">
-              <h5>Standard</h5>
+              <h5>Plus</h5>
             </div>
             <div class="zubuz-pricing-price">
               <h2>$</h2>
@@ -919,21 +974,44 @@
               <p class="dynamic-value" data-active="USD/Billed monthly" data-monthly="USD/Billed monthly" data-yearly="USD/Billed Yearly"></p>
             </div>
             <div class="zubuz-pricing-description">
-              <p>Great for small and medium teams</p>
+              <p>Up to 500 users</p>
             </div>
             <div class="zubuz-pricing-body">
               <ul>
-                <li><img src="assets/images/v2/check2.png" alt="">All multimedia channels</li>
-                <li><img src="assets/images/v2/check2.png" alt="">All advanced CRM features</li>
-                <li><img src="assets/images/v2/check2.png" alt="">Up to 15,000 contacts</li>
-                <li><img src="assets/images/v2/check2.png" alt="">Flow + AI base chatbot</li>
+                <li><img src="assets/images/v2/check2.png" alt="">Includes all features</li>
+                <li><img src="assets/images/v2/check2.png" alt="">Unlimited course upload</li>
+                <li><img src="assets/images/v2/check2.png" alt="">250 GB file storage</li>
                 <li><img src="assets/images/v2/check2.png" alt="">24/7 Support (Live, Email, Chat)</li>
               </ul>
             </div>
             <a class="zubuz-pricing-btn active" href="pricing.html">Select the plan</a>
           </div>
         </div>
-        <div class="col-xl-4 col-md-6">
+        <div class="col-xl-3 col-md-6">
+          <div class="zubuz-pricing-wrap">
+            <div class="zubuz-pricing-header">
+              <h5>Premium</h5>
+            </div>
+            <div class="zubuz-pricing-price">
+              <h2>$</h2>
+              <div class="zubuz-price dynamic-value" data-active="89" data-monthly="89" data-yearly="99"></div>
+              <p class="dynamic-value" data-active="USD/Billed monthly" data-monthly="USD/Billed monthly" data-yearly="USD/Billed Yearly"></p>
+            </div>
+            <div class="zubuz-pricing-description">
+              <p>Up to 1000 users</p>
+            </div>
+            <div class="zubuz-pricing-body">
+              <ul>
+                <li><img src="assets/images/v2/check2.png" alt="">Includes all features</li>
+                <li><img src="assets/images/v2/check2.png" alt="">Unlimited course upload</li>
+                <li><img src="assets/images/v2/check2.png" alt="">500 GB file storage</li>
+                <li><img src="assets/images/v2/check2.png" alt="">24/7 Support (Live, Email, Chat)</li>
+              </ul>
+            </div>
+            <a class="zubuz-pricing-btn" href="pricing.html">Select the plan</a>
+          </div>
+        </div>
+        <div class="col-xl-3 col-md-6">
           <div class="zubuz-pricing-wrap">
             <div class="zubuz-pricing-header">
               <h5>Enterprise</h5>
@@ -948,14 +1026,13 @@
             </div>
             <div class="zubuz-pricing-body">
               <ul>
-                <li><img src="assets/images/v2/check2.png" alt="">All multimedia channels</li>
-                <li><img src="assets/images/v2/check2.png" alt="">All enterprise CRM features</li>
-                <li><img src="assets/images/v2/check2.png" alt="">Up to 25,000 contacts</li>
-                <li><img src="assets/images/v2/check2.png" alt="">Flow + AI base chatbot</li>
-                <li><img src="assets/images/v2/check2.png" alt="">24/7 Support (Live, Email, Chat)</li>
+                <li><img src="assets/images/v2/check2.png" alt="">Includes all features</li>
+                <li><img src="assets/images/v2/check2.png" alt="">Unlimited users</li>
+                <li><img src="assets/images/v2/check2.png" alt="">Unlimited course upload</li>
+                <li><img src="assets/images/v2/check2.png" alt="">24/7 Instant support via phone, email and chat</li>
               </ul>
             </div>
-            <a class="zubuz-pricing-btn" href="pricing.html">Select the plan</a>
+            <a class="zubuz-pricing-btn" href="pricing.html">Contact sales team</a>
           </div>
         </div>
       </div>
@@ -1129,6 +1206,17 @@
 
   <script src="assets/js/app.js"></script>
 
+<script>
+ $(document).ready(function() {
+   const videoElement = document.getElementById("ignite__video");
+   const playBtn =  $("#ignite-play");
 
+   playBtn.on("click", async function () {
+     if (videoElement.paused) {
+       await videoElement.play()
+     }else videoElement.pause()
+   })
+ })
+</script>
 </body>
 </html>
