--- a/index.html
+++ b/index.html
@@ -113,6 +113,12 @@
       grid-column: 2 / 6;
       gap: 32px;
     }
+
+    .partner-logo {
+      width: 175px;
+      height: 40px;
+      object-fit: contain;
+    }
   </style>
 </head>
 
@@ -297,13 +303,13 @@
         </div>
         <div class="col-lg-6">
           <div class="zubuz-hero-thumb2">
-            <img src="assets/image/hero.png" alt="">
-            <div class="zubuz-hero-shape2">
-              <img src="assets/images/v2/shape1-v2.png" alt="">
-            </div>
-            <div class="zubuz-hero-shape3">
-              <img src="assets/images/v2/shape2-v2.png" alt="">
-            </div>
+            <img src="assets/image/hero.png" alt="" height="500">
+<!--            <div class="zubuz-hero-shape2">-->
+<!--              <img src="assets/images/v2/shape1-v2.png" alt="">-->
+<!--            </div>-->
+<!--            <div class="zubuz-hero-shape3">-->
+<!--              <img src="assets/images/v2/shape2-v2.png" alt="">-->
+<!--            </div>-->
           </div>
         </div>
       </div>
@@ -317,25 +323,28 @@
         <p>Trusted by the most innovative companies worldwide</p>
         <div class="zubuz-brand-slider3">
           <div class="zubuz-brand-item">
-            <img src="assets/images/v2/b_v2_1.png" alt="">
+            <img class="partner-logo" src="assets/webimageasset/logo/aitalogo.png" alt="aita">
           </div>
           <div class="zubuz-brand-item">
-            <img src="assets/images/v2/b_v2_2.png" alt="">
+            <img class="partner-logo" src="assets/webimageasset/logo/bornostatelogo.png" alt="borno">
           </div>
           <div class="zubuz-brand-item">
-            <img src="assets/images/v2/b_v2_3.png" alt="">
+            <img class="partner-logo" src="assets/webimageasset/logo/cellulant.png" alt="">
           </div>
           <div class="zubuz-brand-item">
-            <img src="assets/images/v2/b_v2_4.png" alt="">
+            <img class="partner-logo" src="assets/webimageasset/logo/collaborationsystem.png" alt="">
           </div>
           <div class="zubuz-brand-item">
-            <img src="assets/images/v2/b_v2_5.png" alt="">
+            <img class="partner-logo" src="assets/webimageasset/logo/fmdq.png" alt="">
           </div>
           <div class="zubuz-brand-item">
-            <img src="assets/images/v2/b_v2_1.png" alt="">
+            <img class="partner-logo" src="assets/webimageasset/logo/ics.png" alt="">
           </div>
           <div class="zubuz-brand-item">
-            <img src="assets/images/v2/b_v2_2.png" alt="">
+            <img class="partner-logo" src="assets/webimageasset/logo/iit.png" alt="">
+          </div>
+          <div class="zubuz-brand-item">
+            <img class="partner-logo" src="assets/webimageasset/logo/unitylogo.png" alt="">
           </div>
         </div>
       </div>
@@ -361,7 +370,7 @@
                 sociated with in-person training sessions and printed materials.</p>
             </div>
             <div class="zubuz-iconbox-thumb">
-              <img src="assets/images/v2/card-v2-1.png" alt="">
+              <img src="assets/webimageasset/595279.png"  alt="">
             </div>
           </div>
           <div class="zubuz-iconbox-wrap2">
@@ -401,7 +410,7 @@
                 ccess training materials, company policies, and essential resources from a single platform.</p>
             </div>
             <div class="zubuz-iconbox-thumb">
-              <img src="assets/images/v2/card-v2-2.png" alt="">
+              <img src="assets/webimageasset/employee.png" alt="">
             </div>
           </div>
           <div class="zubuz-iconbox-wrap2">
@@ -413,7 +422,7 @@
               <p>Train core staff, contract/adhoc staff, agents, contractors or customers with a single instance of Central LMS..</p>
             </div>
             <div class="zubuz-iconbox-thumb">
-              <img src="assets/images/v2/card-v2-4.png" alt="">
+              <img src="assets/webimageasset/multiusercategory.png" alt="">
             </div>
           </div>
           <div class="zubuz-iconbox-wrap2">
@@ -490,7 +499,7 @@
       <div class="row align-items-center">
         <div class="col-lg-5">
           <div class="zubuz-v2-thumb thumb-mr">
-            <img src="assets/images/v2/thumb-v2-1.png" alt="">
+            <img src="assets/webimageasset/mobile1.png" alt="">
             <div class="zubuz-v2-thumb-shape">
               <img src="assets/images/v2/shape3-v2.png" alt="">
             </div>
@@ -525,7 +534,7 @@
       <div class="row align-items-center">
         <div class="col-lg-5 order-lg-2">
           <div class="zubuz-v2-thumb thumb-ml">
-            <img src="assets/images/v2/thumb-v2-2.png" alt="">
+            <img src="assets/webimageasset/10401.png" alt="">
           </div>
         </div>
         <div class="col-lg-7">
@@ -625,7 +634,7 @@
       <div class="row align-items-center">
         <div class="col-lg-5">
           <div class="zubuz-v2-thumb thumb-mr">
-            <img src="assets/images/v2/thumb-v2-1.png" alt="">
+            <img src="assets/webimageasset/1040.png" alt="">
             <div class="zubuz-v2-thumb-shape">
               <img src="assets/images/v2/shape3-v2.png" alt="">
             </div>
