--- a/index.html
+++ b/index.html
@@ -361,7 +361,8 @@
         <div class="col-lg-6">
           <div class="zubuz-iconbox-wrap2">
             <div class="zubuz-iconbox-icon">
-              <img src="assets/images/v2/icon-v2-3.png" alt="">
+              <i class="fa fa-cut"></i>
+<!--              <img src="assets/images/v2/icon-v2-3.png" alt="">-->
             </div>
             <div class="zubuz-iconbox-data">
               <h3>Cut down on training cost:</h3>
@@ -370,24 +371,24 @@
                 sociated with in-person training sessions and printed materials.</p>
             </div>
             <div class="zubuz-iconbox-thumb">
-              <img src="assets/webimageasset/595279.png"  alt="">
+              <img src="assets/webimageasset/561179.png"  alt="">
             </div>
           </div>
           <div class="zubuz-iconbox-wrap2">
             <div class="zubuz-iconbox-icon">
-              <img src="assets/images/v2/icon-v2-2.png" alt="">
+              <i class="fa fa-users"></i>
             </div>
             <div class="zubuz-iconbox-data">
-              <h3>Flexible licence model:</h3>
-              <p>Site license or per user license, Central LMS supports both. The choice is simply yours to make.</p>
+              <h3>Multi-user category support:</h3>
+              <p>Train core staff, contract/adhoc staff, agents, contractors or customers with a single instance of Central LMS..</p>
             </div>
             <div class="zubuz-iconbox-thumb">
-              <img src="assets/images/v2/card-v2-3.png" alt="">
+              <img src="assets/webimageasset/multiusercategory.png" alt="">
             </div>
           </div>
           <div class="zubuz-iconbox-wrap2">
             <div class="zubuz-iconbox-icon">
-              <img src="assets/images/v2/icon-v2-2.png" alt="">
+              <i class="fa fa-sticky-note"></i>
             </div>
             <div class="zubuz-iconbox-data">
               <h3>Recruitment tests:</h3>
@@ -395,14 +396,26 @@
                 the most qualified individuals progress through the hiring process.</p>
             </div>
             <div class="zubuz-iconbox-thumb">
-              <img src="assets/images/v2/card-v2-3.png" alt="">
+              <img src="assets/webimageasset/lms1.png" alt="">
             </div>
           </div>
         </div>
         <div class="col-lg-6">
           <div class="zubuz-iconbox-wrap2">
             <div class="zubuz-iconbox-icon">
-              <img src="assets/images/v2/icon-v2-2.png" alt="">
+              <i class="fa fa-file-invoice-dollar"></i>
+            </div>
+            <div class="zubuz-iconbox-data">
+              <h3>Flexible licence model:</h3>
+              <p>Site license or per user license, Central LMS supports both. The choice is simply yours to make.</p>
+            </div>
+            <div class="zubuz-iconbox-thumb">
+              <img src="assets/webimageasset/pricing.png" alt="">
+            </div>
+          </div>
+          <div class="zubuz-iconbox-wrap2">
+            <div class="zubuz-iconbox-icon">
+              <i class="fa fa-chalkboard-teacher"></i>
             </div>
             <div class="zubuz-iconbox-data">
               <h3>Employee Onboarding:</h3>
@@ -415,26 +428,14 @@
           </div>
           <div class="zubuz-iconbox-wrap2">
             <div class="zubuz-iconbox-icon">
-              <img src="assets/images/v2/icon-v2-4.png" alt="">
-            </div>
-            <div class="zubuz-iconbox-data">
-              <h3>Multi-user category support:</h3>
-              <p>Train core staff, contract/adhoc staff, agents, contractors or customers with a single instance of Central LMS..</p>
-            </div>
-            <div class="zubuz-iconbox-thumb">
-              <img src="assets/webimageasset/multiusercategory.png" alt="">
-            </div>
-          </div>
-          <div class="zubuz-iconbox-wrap2">
-            <div class="zubuz-iconbox-icon">
-              <img src="assets/images/v2/icon-v2-4.png" alt="">
+              <i class="fa fa-level-up-alt"></i>
             </div>
             <div class="zubuz-iconbox-data">
               <h3>Improved level of job performance:</h3>
               <p>Better trained employees perform better at their job.</p>
             </div>
             <div class="zubuz-iconbox-thumb">
-              <img src="assets/images/v2/card-v2-4.png" alt="">
+              <img src="assets/webimageasset/595279.png" alt="">
             </div>
           </div>
         </div>
@@ -709,7 +710,7 @@
                <p>Deploy Central LMS directly onto your domain using your current IT infrastructure, eliminating the need
                  for extra hardware costs.</p>
              </div>
-              <img style="z-index: 1" src="https://tse4.mm.bing.net/th/id/OIP.dEEntwA11TMTNJizJ0StLAHaHa?rs=1&pid=ImgDetMain" class="position-absolute card-icon">
+              <img style="z-index: 1" src="assets/webimageasset/onsight.png" class="position-absolute card-icon">
             </div>
             <div class="my-5 position-relative border-0 p-5 card shadow" style="margin-bottom: 60px">
               <div style="z-index: 100" class="position-relative">
@@ -718,7 +719,7 @@
                   and dedicated URL.</p>
               </div>
 
-              <img style="z-index: 1" src="https://tse4.mm.bing.net/th/id/OIP.dEEntwA11TMTNJizJ0StLAHaHa?rs=1&pid=ImgDetMain" class="position-absolute card-icon">
+              <img style="z-index: 1" src="assets/webimageasset/server.png" class="position-absolute card-icon">
 
             </div>
           </div>
