--- a/index.html
+++ b/index.html
@@ -119,6 +119,17 @@
       height: 40px;
       object-fit: contain;
     }
+
+    .zubuz-social-icon.social-box ul li a:hover, .zubuz-pricing-btn.active, .zubuz-pricing-btn:hover {
+      background-color: var(--bs-success);
+      border: 1px solid var(--bs-success);
+    }
+
+    /*.zubuz-pricing-btn.active {*/
+    /*  color: var(--white-color) !important;*/
+    /*  background-color: var(--primary-color);*/
+    /*  border: 1px solid var(--primary-color);*/
+    /*}*/
   </style>
 </head>
 
@@ -240,7 +251,7 @@
         <!-- Brand Logo-->
         <div class="brand-logo">
           <a href="index.html">
-            <img style="width: 175px;" src="/assets/image/logo.png" alt="Logo">
+            <img style="max-width: 175px !important;" src="/assets/image/logo.png" alt="Logo">
           </a>
         </div>
         <div class="menu-block-wrapper">
@@ -853,13 +864,13 @@
           <div class="zubuz-testimonial-slider-data">
             <h2 class="text-white display-5 fw-bold"> Enjoy 95%+ uptime with our dedicated support team.</h2>
             <div class="zubuz-testimonial-slider-rating my-4">
-              <ul>
-                <li><img src="assets/images/v2/rating2.png" alt=""></li>
-                <li><img src="assets/images/v2/rating2.png" alt=""></li>
-                <li><img src="assets/images/v2/rating2.png" alt=""></li>
-                <li><img src="assets/images/v2/rating2.png" alt=""></li>
-                <li><img src="assets/images/v2/rating2.png" alt=""></li>
-              </ul>
+<!--              <ul>-->
+<!--                <li><img src="assets/images/v2/rating2.png" alt=""></li>-->
+<!--                <li><img src="assets/images/v2/rating2.png" alt=""></li>-->
+<!--                <li><img src="assets/images/v2/rating2.png" alt=""></li>-->
+<!--                <li><img src="assets/images/v2/rating2.png" alt=""></li>-->
+<!--                <li><img src="assets/images/v2/rating2.png" alt=""></li>-->
+<!--              </ul>-->
             </div>
             <p class="slider-text f-size-20">Experience unparalleled support with our round-the-clock customer service offered by our support team
               with acute knowledge of all products and services.
@@ -959,7 +970,7 @@
       </div>
       <div class="zubuz-footer-bottom center">
         <div class="zubuz-copywright">
-          <p> &copy;Copyright 2024, All Rights Reserved by Kodek</p>
+          <p> &copy;Copyright 2023, All Rights Reserved by Kodek</p>
         </div>
       </div>
     </div>
