--- a/index.html
+++ b/index.html
@@ -115,16 +115,29 @@
     }
 
     .partner-logo {
-      width: 175px;
-      height: 40px;
+      width: 200px;
+      height: 60px;
       object-fit: contain;
+    }
+
+    .f-size-24 {
+      font-size: 24px;
     }
 
     .zubuz-social-icon.social-box ul li a:hover, .zubuz-pricing-btn.active, .zubuz-pricing-btn:hover {
       background-color: var(--bs-success);
       border: 1px solid var(--bs-success);
     }
+    .zubuz-footer-menu ul li a:hover {
+      color: var(--bs-success);
+    }
 
+    .zubuz-hero-section2 {
+      padding: 150px 0 70px;
+    }
+    .zubuz-section-padding2 {
+      padding: 80px 0;
+    }
     /*.zubuz-pricing-btn.active {*/
     /*  color: var(--white-color) !important;*/
     /*  background-color: var(--primary-color);*/
@@ -330,8 +343,8 @@
 
   <div class="zubuz-brand-logo-section">
     <div class="container">
-      <div class="zubuz-brand-logo-wrap">
-        <p>Trusted by the most innovative companies worldwide</p>
+      <div class="zubuz-brand-logo-wrap border-bottom-0 pb-5">
+        <p class="f-size-24">Trusted by the most innovative companies worldwide</p>
         <div class="zubuz-brand-slider3">
           <div class="zubuz-brand-item">
             <img class="partner-logo" src="assets/webimageasset/logo/aitalogo.png" alt="aita">
@@ -363,7 +376,7 @@
   </div>
   <!-- End section -->
 
-  <div class="section zubuz-section-padding3">
+  <div class="section zubuz-section-padding2">
     <div class="container">
       <div class="zubuz-section-title center">
         <h2 class="display-5 fw-bold">Benefits and applications to your organization</h2>
@@ -507,7 +520,7 @@
   <!-- End Section -->
   <div class="section zubuz-section-padding2">
     <div id="zubuz-counter1"></div>
-    <div class="container zubuz-brand-logo-wrap">
+    <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-5">
           <div class="zubuz-v2-thumb thumb-mr">
@@ -536,8 +549,8 @@
   </div>
 
   <!-- End section -->
-  <div class="section zubuz-section-padding5" id="feature">
-    <div class="container pt-5">
+  <div class="section" id="feature">
+    <div class="container">
       <div class="zubuz-section-title center">
         <h2 class="display-5 fw-bold">Features and Capabilities</h2>
         <p  class="mt-5 f-size-20">Central LMS offers you much more than LMS; it has been carefully designed to form an integral part of
@@ -701,7 +714,7 @@
     </div>
   </div>
 
-  <div class="section zubuz-section-padding3 bg-light">
+  <div class="section zubuz-section-padding2 bg-light">
     <div id="zubuz-counter"></div>
     <div class="container">
       <div class="row align-items-center">
@@ -740,7 +753,7 @@
   </div>
 
 
-  <div class="section zubuz-section-padding3 bg-light position-relative">
+  <div class="section bg-light position-relative">
     <div class="container-fluid">
       <div class="zubuz-section-title center">
         <h2 class="display-5 fw-bold">Subscription/Plan</h2>
@@ -920,12 +933,13 @@
     <div class="container">
       <div class="zubuz-footer-top">
         <div class="row">
-          <div class="col-xl-4 col-lg-12">
+          <div class="col-xl-5 col-lg-12">
             <div class="zubuz-footer-textarea">
               <a href="">
                 <img width="200" src="assets/image/logo.png" alt="">
               </a>
-              <p class="f-size-18">We're your innovation partner, delivering cutting-edge solutions that elevate your business to the next level.</p>
+              <p class="f-size-18 mb-0">Learn, Grow, and Succeed with Central learning management system.</p>
+              <p class="f-size-18 mt-0">Central LMS is a product of <a href="https://kodekinnovations.com/" class="text-success"> Kodek Innovations Ltd.</a></p>
             </div>
           </div>
           <div class="col-xl-4 col-lg-12 d-flex flex-column align-items-center">
@@ -968,9 +982,19 @@
           </div>
         </div>
       </div>
-      <div class="zubuz-footer-bottom center">
+      <div class="zubuz-footer-bottom center d-flex justify-content-between">
         <div class="zubuz-copywright">
-          <p> &copy;Copyright 2023, All Rights Reserved by Kodek</p>
+          <p > &copy;Copyright 2024, All Rights Reserved by Kodek</p>
+        </div>
+        <div>
+          <ul class="footer__end-links f-size-14 nav">
+            <li class="footer__end-item px-2">
+              <a href="index.html#" class="text-dark"> Terms & Conditions </a>
+            </li>
+            <li class="footer__end-item px-2">
+              <a href="index.html#" class="text-dark"> Privacy Policy </a>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
