--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
       </div>
       <div class="row">
         <div class="col-lg-6">
-          <div class="zubuz-iconbox-wrap2">
+          <div class="zubuz-iconbox-wrap2 pb-4">
             <div class="zubuz-iconbox-icon">
               <i class="fa fa-cut"></i>
 <!--              <img src="assets/images/v2/icon-v2-3.png" alt="">-->
@@ -394,11 +394,11 @@
                 anywhere, minimizing the expenses a
                 sociated with in-person training sessions and printed materials.</p>
             </div>
-            <div class="zubuz-iconbox-thumb">
-              <img src="assets/webimageasset/561179.png"  alt="">
-            </div>
+<!--            <div class="zubuz-iconbox-thumb">-->
+<!--              <img src="assets/webimageasset/561179.png"  alt="">-->
+<!--            </div>-->
           </div>
-          <div class="zubuz-iconbox-wrap2">
+          <div class="zubuz-iconbox-wrap2 pb-4">
             <div class="zubuz-iconbox-icon">
               <i class="fa fa-users"></i>
             </div>
@@ -406,11 +406,11 @@
               <h3>Multi-user category support:</h3>
               <p>Train core staff, contract/adhoc staff, agents, contractors or customers with a single instance of Central LMS..</p>
             </div>
-            <div class="zubuz-iconbox-thumb">
-              <img src="assets/webimageasset/multiusercategory.png" alt="">
-            </div>
+<!--            <div class="zubuz-iconbox-thumb">-->
+<!--              <img src="assets/webimageasset/multiusercategory.png" alt="">-->
+<!--            </div>-->
           </div>
-          <div class="zubuz-iconbox-wrap2">
+          <div class="zubuz-iconbox-wrap2 pb-4">
             <div class="zubuz-iconbox-icon">
               <i class="fa fa-sticky-note"></i>
             </div>
@@ -419,13 +419,13 @@
               <p>Use Central LMS to evaluate candidates' competencies accurately and efficiently, ensuring that only
                 the most qualified individuals progress through the hiring process.</p>
             </div>
-            <div class="zubuz-iconbox-thumb">
-              <img src="assets/webimageasset/lms1.png" alt="">
-            </div>
+<!--            <div class="zubuz-iconbox-thumb">-->
+<!--              <img src="assets/webimageasset/lms1.png" alt="">-->
+<!--            </div>-->
           </div>
         </div>
         <div class="col-lg-6">
-          <div class="zubuz-iconbox-wrap2">
+          <div class="zubuz-iconbox-wrap2 pb-4">
             <div class="zubuz-iconbox-icon">
               <i class="fa fa-file-invoice-dollar"></i>
             </div>
@@ -433,11 +433,11 @@
               <h3>Flexible licence model:</h3>
               <p>Site license or per user license, Central LMS supports both. The choice is simply yours to make.</p>
             </div>
-            <div class="zubuz-iconbox-thumb">
-              <img src="assets/webimageasset/pricing.png" alt="">
-            </div>
+<!--            <div class="zubuz-iconbox-thumb">-->
+<!--              <img src="assets/webimageasset/pricing.png" alt="">-->
+<!--            </div>-->
           </div>
-          <div class="zubuz-iconbox-wrap2">
+          <div class="zubuz-iconbox-wrap2 pb-4">
             <div class="zubuz-iconbox-icon">
               <i class="fa fa-chalkboard-teacher"></i>
             </div>
@@ -446,11 +446,11 @@
               <p>Eliminate cumbersome paper-based documentation and lengthy orientation sessions. Enable new hires
                 ccess training materials, company policies, and essential resources from a single platform.</p>
             </div>
-            <div class="zubuz-iconbox-thumb">
-              <img src="assets/webimageasset/employee.png" alt="">
-            </div>
+<!--            <div class="zubuz-iconbox-thumb">-->
+<!--              <img src="assets/webimageasset/employee.png" alt="">-->
+<!--            </div>-->
           </div>
-          <div class="zubuz-iconbox-wrap2">
+          <div class="zubuz-iconbox-wrap2 pb-4">
             <div class="zubuz-iconbox-icon">
               <i class="fa fa-level-up-alt"></i>
             </div>
@@ -458,9 +458,9 @@
               <h3>Improved level of job performance:</h3>
               <p>Better trained employees perform better at their job.</p>
             </div>
-            <div class="zubuz-iconbox-thumb">
-              <img src="assets/webimageasset/595279.png" alt="">
-            </div>
+<!--            <div class="zubuz-iconbox-thumb">-->
+<!--              <img src="assets/webimageasset/595279.png" alt="">-->
+<!--            </div>-->
           </div>
         </div>
       </div>
